# Codestral-CHAT

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  muain.cpp  vcpkg_beispielprojekt.sln  vcpkg_beispielprojekt.vcxproj  vcpkg_beispielprojekt.vcxproj.filters
